--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,83 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  font-family: Arial, Helvetica, sans-serif;
 }
+h1, h2, h3 {
+  margin: 0.5rem 0;
+}
+h1{
+  font-size: 1.5rem;
+}
+h2{
+  font-size: 1.2rem;
+}
+h3{
+  font-size: 1rem;
+}
+.header a{
+  text-decoration: none;
+}
+.row{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+}
+.col-1{
+  width: 20%;
+  flex: 1;
+}
+.col-2{
+  flex: 2;
+}
+.block {
+  background-color: #E6E6E6;
+  padding: 1rem;
+  margin: 0.5rem;
+  border-radius: 0.5rem;
+}
+.row.center{
+  align-items: center;
+}
+.prodact img{
+  align-items: center;
+  justify-content: center;
+}
+.small{
+  display: flex;
+  flex: 1;
+  
+}
+img.small{
+  max-height: 8rem;
+}
+button{
+  font-size: 0.8rem;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border-radius: 0.5rem;
+  border: 0.1rem black solid;
+  background-color: #f0c040;
+  width: 90%;
+  cursor: pointer;
+}
+button.add {
+  background-color: aqua;
+  width: 2rem;
+}
+button.remove {
+  background-color: red;
+  width: 2rem;
+}
+button.badge {
+  background-color: red;
+  border: none;
+  color: white;
+  width: 1.5rem;
+}
+.text-right {
+  text-align: right;
+  margin-top: 20px;
+}
+.itemName{
+  margin-top: 20px;
 }
